fix box alignment

--- a/packages/react/src/components/forms/TypeAheadDropdown/_index.scss
+++ b/packages/react/src/components/forms/TypeAheadDropdown/_index.scss
@@ -11,7 +11,6 @@
 
   &--boxed {
     position: absolute;
-    top: 45px;
     width: 100%;
     z-index: 100;
   }
